# Design-of-Concrete-Structures

./: .gitignore  Ampiezza_fessure.ipynb  M - N interaction diagram.ipynb  README.md  Sezione T.ipynb  ULS.py  Untitled.ipynb  Verifiche elemento inflesso.ipynb  environment.yml  main_ULS.py  main_jupyter.ipynb  main_streamlit.py  progetto_slu.ipynb  pyproject.toml  requirements.txt  s r t.ipynb  sls.py  terzo sistema as d.ipynb  verifiche_varie.ipynb
OLD/: SLU.ipynb  Untitled.ipynb  Verifiche elemento compresso - teso.ipynb  Verifiche elemento inflesso.ipynb  Verifiche elemento presso-inflesso.ipynb  s r t.ipynb  terzo sistema as d.ipynb
pages/: 10_📂_Material_database.py  1_🟨_Check_of_Reinforced_Concrete_section.py  1_🟨_Design_of_Reinforced_Concrete_section.py  2_🟨_Check_of_Reinforced_Concrete_section.py  3_🟧_M-N_Diagram.py
reinforced concrete section/: concrete_database.json  sections.py  steel_database.json
reinforced_concrete/: MN_interaction_diagram.py  ULS.py  concrete_database.json  deflection.py  design.py  instability.py  sections.py  shear.py  sls.py  steel_database.json
